python/testData/quickFixes/PyAddImportQuickFixTest/nestedClassAutoImport/main.py
value = <error descr="Unresolved reference 'Inner'">In<caret>ner</error>()
